# libemu51

./: CMakeLists.txt  COPYING  README.md
doc/: Doxyfile.in
include/: emu51.h
src/: CMakeLists.txt  emu51.c  helpers.h  instr.c  instr.h  mem.h
tests/: CMakeLists.txt  coverage-lcov.sh  test_alu.c  test_api.c  test_helpers.c  test_instr.c  test_instr_common.h  test_jumps.c  test_mem.c  tests.c
